Outline of algorithm execution